--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Web App</title>
   <%= stylesheet_link_tag 'web_app_theme' %>
-  <%= javascript_include_tag :defaults, :cache => true %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
